@@ -1,0 +1,5 @@
+[[
+
+Context.ContentType:='text/event-stream';
+
+(Context as IXxmContextSuspend).Suspend('demo12',250,1000,'ES2.xxmi',1,'ES3.xxmi',1);
