@@ -1,5 +1,6 @@
 v1.2.4.?
 - revised context object lifetime management (lock-less reference counting)
+- demo 12 "Long Polling": added example EventSource (text/event-stream)
 
 v1.2.3.408
 - WebSocket support (only xxmHttp,xxmSyna,xxmAhttpd,xxmHost)
